<resources>
    <string name="app_name">Check my receipt</string>
    <string name="log_out">Log out</string>
    <string name="actionSignOut">actionSignOut</string>
    <string name="myReceipts">My Receipts</string>
    <string name="failAddReceipt">Failed to add receipt</string>
    <string name="failReceiptUpdate">failed to update receipt</string>
    <string name="errorReceipts">error getting receipts.</string>
    <string name="noReceipts">No receipts created.</string>
    <string name="myReceiptItems">My Receipt - Items</string>
    <string name="myReceiptAdd">My Receipt - Add</string>
    <string name="myReceiptTotals">My Receipt - Totals</string>
    <string name="noReceiptsFound">No receipts Found.</string>
    <string name="failedNewItem">Failed adding new item.</string>
    <string name="enterTaxPrice">Please enter a price</string>
    <string name="fixInputs">Please Fix inputs.</string>
    <string name="failedToDeleteItems">items failed to delete</string>
    <string name="noReceiptItemsFound">No receipt items found</string>
    <string name="errorReceipt">Error Getting receipt</string>
    <string name="noReceiptFound">No receipts Found.</string>
    <string name="nothingNull">null</string>
    <string name="noName">no Name</string>
    <string name="noDate">no Date</string>
    <string name="noPrice">no Price</string>
    <string name="subTotalNull">Subtotal is null</string>
    <string name="receiptNotUpdated">receipt not updated in database.</string>
    <string name="errorGettingReceiptItems">Error getting receipts items.</string>
    <string name="taxBetweenError">Sales tax must be between 0-100</string>
    <string name="CheckMyReceipt">Check My Receipt</string>
    <string name="login">Login</string>
    <string name="discount">Discount:</string>
    <string name="please_fill_out_all_inputs">Please Fill out all inputs.</string>
    <string name="discountPercent">Discount (%)</string>
    <string name="quantity">Quantity</string>
    <string name="priceSymbol">Price ($)</string>
    <string name="computeTotals">Compute Totals</string>
    <string name="local_sales_tax">Local Sales Tax</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="tip10">10% tip</string>
    <string name="tip20">20% tip</string>
    <string name="tip30">30% tip</string>
</resources>