<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/addPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/priceSymbol"
                app:layout_constraintBottom_toTopOf="@+id/addPriceInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/addPriceInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/addQuantityLabel"
                app:layout_constraintStart_toStartOf="@+id/addPriceLabel"
                app:layout_constraintTop_toBottomOf="@+id/addPriceLabel" />

            <TextView
                android:id="@+id/addQuantityLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/quantity"
                app:layout_constraintBottom_toTopOf="@+id/addQuantityInput"
                app:layout_constraintStart_toStartOf="@+id/addPriceInput"
                app:layout_constraintTop_toBottomOf="@+id/addPriceInput" />

            <EditText
                android:id="@+id/addQuantityInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@+id/addDiscountLabel"
                app:layout_constraintStart_toStartOf="@+id/addDiscountLabel"
                app:layout_constraintTop_toBottomOf="@+id/addQuantityLabel" />

            <TextView
                android:id="@+id/addDiscountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discountPercent"
                app:layout_constraintBottom_toTopOf="@+id/addDiscountInput"
                app:layout_constraintStart_toStartOf="@+id/addDiscountInput"
                app:layout_constraintTop_toBottomOf="@+id/addQuantityInput" />

            <EditText
                android:id="@+id/addDiscountInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addDiscountLabel" />

            <TextView
                android:id="@+id/addItemError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_fill_out_all_inputs"
                android:textColor="#F40F0F"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>